--- a/custom_components/xras_space_weather/manifest.json
+++ b/custom_components/xras_space_weather/manifest.json
@@ -8,5 +8,5 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "requirements": ["beautifulsoup4==4.12.3"],
-  "version": "0.0.1-alfa"
+  "version": "0.0.4"
 }
